# turboactivate-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  turboactivate-emulator.sln  turboactivate-emulator.vcxproj  turboactivate-emulator.vcxproj.filters
src/: TurboActivate.h  functions.cpp  functions.h  inih.h  main.cpp
